[project]
name = "terraingenerator"
version = "0.1.0"
description = "Python Project that creates terrain by smoothing random noise."
authors = []
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "terraingenerator", from = "src"}]

[project.scripts]
terrain = "terraingenerator.TerrainGenerator:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
